--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.password=password
 spring.datasource.username=postgres
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 server.port=5000
