--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+				<groupId>at.favre.lib</groupId>
+				<artifactId>bcrypt</artifactId>
+				<version>0.9.0</version>
+		</dependency>
+		<!-- <dependency>
+			<groupId>de.nycode</groupId>
+			<artifactId>bcrypt</artifactId>
+			<version>2.3.0</version>
+		</dependency> -->
 	</dependencies>
 
 	<build>
