--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,7 @@
 version: "3"
+
+volumes:
+  psqlDemo:
 services:
   db:
     image: postgres
@@ -8,3 +11,5 @@ services:
       - POSTGRES_DB=ejemplo
     ports:
       - "5432:5432"
+    volumes:
+      - psqlDemo:/var/lib/psql
